v.1.1.0

Compatibility update:

- compatible items are now always enabled
- You can now pick gear from creative tab, and it will get stats.
- compatible item datapacks no longer specify level, as level is now dictated by gear type


Update your library of exile.

- fix nature balm
- level ups now show on screen title messages.
- fixed some texture errors
- fix attack speed
- Jar in Jared some deps in my library
- fix typo in mod name of config

v.1.0.7

- Changed affix datapacks to require tags instead of specific base gears.
This should make it much easier to add new base gears now!
Before you had to change all the affixes a sword uses for example, to include your custom sword type. 
But now as long as you have the "sword" tag, it should work.
- casting weapon requirements are now also gotten through gear type tags, which means you can modify which weapons can cast which spells now!
- int now gives mana regen too
- updated chinese lang


v.1.0.6

* added help button on EVERY gui or station that needs it! 
It will explain what the block is used for. Should help newbies a lot.
* made jewel socketing more informative
* if pvp is disabled magic shield should no longer bypass pvp checks
* changed buff spells to require any weapon, instead of mage weapons
* reduced level penalty a bit
* upped default gear drops a bit
* decreased default stat scalings

v1.0.5

Backup world before update! I added some code to retrieve the spells from hotbar but it might not work.

* spell hotbar setup is now an inventory, and should be much more intuitive.
* you can now switch spells with middle mouse scrolling! (when pressing R)
* switched to vanilla bows, there were arrow render problems (i think vanilla hardcoded them..)
* spells now correctly require bows or melee (for arrow spells and melee spells) currently only 1 melee spell
* compatible items should now be able to cast spells
* jewels now more likely to drop as a lower level, to allow easier socketing